--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,6 +3,8 @@ before:
     - go mod download
     - govulncheck
 builds:
+  - id: flowmanager
+    main: main/main.go
   - env:
       - CGO_ENABLED=0
     goos:
@@ -10,15 +12,14 @@ builds:
       - darwin
       - windows
     goarch:
-      - 386
       - amd64
       - arm
       - arm64
     ignore:
       - goos: darwin
-        goarch: 386
+        goarch: "386"
       - goos: windows
-        goarch: 386
+        goarch: "386"
 
 checksum:
   name_template: "{{ .ProjectName }}_checksums.txt"
